# stress-uk

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stress_uk/: __init__.py  constants.py  data_utils.py  embeddings.py  heteronyms.py  hub.py  infer.py  model.py  train.py
src/stress_uk/data/: train.jsonl  val.jsonl  vocab.json  word_patterns.json
